Various bug fixes (#12)
* Remove unused index.html, add /design to repo and concat current README with CRA's README

* Add design directory to repo

* Make h3 responsive font size

* Reduce margin spacing to prevent empty white space underneath connecting lines

* Add focus property to footer link and footer svg

* Navbar: Use a element instead of MUI button, config a hover,active and focus state to match design, shortly svg is not a button, match login button design

* Add s to link

* Reduce navbar padding on mobile, config to center desktop hero text vertically

* Shorten Demo: Use different bg image on mobile,set bg size to cover, match button design and reduce margin on mobile

* Add preview website to README

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,6 @@
-a.footerSvg:hover path {
-  fill: hsl(180, 66%, 49%);
-}
-
-a.footerSvg:active path {
+a.footerSvg:hover path,
+a.footerSvg:active path,
+a.footerSvg:focus path{
   fill: hsl(180, 66%, 49%);
 }
 
@@ -11,6 +9,8 @@ a.footer {
   text-decoration: none;
 }
 
-a.footer:hover {
+a.footer:hover,
+a.footer:active,
+a.footer:focus {
   color: hsl(180, 66%, 49%);
 }
